// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input custom max/min/step match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": Object {
            "& ::-moz-selection": Object {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": Object {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.5.1",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        max={10000}
        min={5000}
        onChange={[Function]}
        overrides={Object {}}
        step={100}
        value={5000}
      >
        <Component
          className="HoiPoi__Slider__root-4-0"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={Object {}}
        >
          <div
            className="HoiPoi__InputWrapper__root-4-6 HoiPoi__InputWrapper__vertical-4-10 HoiPoi__Slider__root-4-0"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-4-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-4-9"
              >
                <div
                  className="HoiPoi__Label__root-4-15 HoiPoi__InputWrapper__Label-4-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-4-16"
                    overrides={Object {}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-4-19 HoiPoi__Label__Text-4-16 HoiPoi__Text__body-4-29"
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-4-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={Object {}}
                  className="HoiPoi__Slider__slider-4-1"
                  defaultValue={5000}
                  disabled={false}
                  dotStyle={Object {}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    Array [
                      Object {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={Object {}}
                  max={10000}
                  min={5000}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={Object {}}
                  reverse={false}
                  step={100}
                  trackStyle={
                    Array [
                      Object {},
                    ]
                  }
                  value={5000}
                  vertical={false}
                >
                  <div
                    className="rc-slider HoiPoi__Slider__slider-4-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={Object {}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={Object {}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          Object {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={Object {}}
                      dotStyle={Object {}}
                      dots={false}
                      included={true}
                      lowerBound={5000}
                      marks={Object {}}
                      max={10000}
                      min={5000}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={100}
                      upperBound={5000}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-4-2"
                      key="0"
                    >
                      <span
                        className="HoiPoi__Slider__overlayLabel-4-3"
                        style={
                          Object {
                            "left": "0%",
                          }
                        }
                      >
                        5000
                      </span>
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-4-4"
                        disabled={false}
                        dragging="false"
                        max={10000}
                        min={5000}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={Object {}}
                        value={5000}
                        vertical={false}
                      >
                        <div
                          aria-disabled={false}
                          aria-valuemax={10000}
                          aria-valuemin={5000}
                          aria-valuenow={5000}
                          className="HoiPoi__Slider__overlayHandler-4-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            Object {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={0}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={5000}
                      marks={Object {}}
                      max={10000}
                      min={5000}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={5000}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={Object {}}
            />
          </div>
        </Component>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input custom tip match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": Object {
            "& ::-moz-selection": Object {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": Object {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.5.1",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={Object {}}
        step={1}
        tipFormatter={[Function]}
        value={0}
      >
        <Component
          className="HoiPoi__Slider__root-3-0"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={Object {}}
        >
          <div
            className="HoiPoi__InputWrapper__root-3-6 HoiPoi__InputWrapper__vertical-3-10 HoiPoi__Slider__root-3-0"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-3-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-3-9"
              >
                <div
                  className="HoiPoi__Label__root-3-15 HoiPoi__InputWrapper__Label-3-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-3-16"
                    overrides={Object {}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-3-19 HoiPoi__Label__Text-3-16 HoiPoi__Text__body-3-29"
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-3-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={Object {}}
                  className="HoiPoi__Slider__slider-3-1"
                  defaultValue={0}
                  disabled={false}
                  dotStyle={Object {}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    Array [
                      Object {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={Object {}}
                  max={100}
                  min={0}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={Object {}}
                  reverse={false}
                  step={1}
                  trackStyle={
                    Array [
                      Object {},
                    ]
                  }
                  value={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider HoiPoi__Slider__slider-3-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={Object {}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={Object {}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          Object {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={Object {}}
                      dotStyle={Object {}}
                      dots={false}
                      included={true}
                      lowerBound={0}
                      marks={Object {}}
                      max={100}
                      min={0}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={1}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-3-2"
                      key="0"
                    >
                      <span
                        className="HoiPoi__Slider__overlayLabel-3-3"
                        style={
                          Object {
                            "left": "0%",
                          }
                        }
                      >
                        0%
                      </span>
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-3-4"
                        disabled={false}
                        dragging="false"
                        max={100}
                        min={0}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={Object {}}
                        value={0}
                        vertical={false}
                      >
                        <div
                          aria-disabled={false}
                          aria-valuemax={100}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="HoiPoi__Slider__overlayHandler-3-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            Object {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={0}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={0}
                      marks={Object {}}
                      max={100}
                      min={0}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={Object {}}
            />
          </div>
        </Component>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": Object {
            "& ::-moz-selection": Object {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": Object {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.5.1",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={Object {}}
        step={1}
        value={0}
      >
        <Component
          className="HoiPoi__Slider__root-1-0"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={Object {}}
        >
          <div
            className="HoiPoi__InputWrapper__root-1-6 HoiPoi__InputWrapper__vertical-1-10 HoiPoi__Slider__root-1-0"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-1-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-1-9"
              >
                <div
                  className="HoiPoi__Label__root-1-15 HoiPoi__InputWrapper__Label-1-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-1-16"
                    overrides={Object {}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-1-19 HoiPoi__Label__Text-1-16 HoiPoi__Text__body-1-29"
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-1-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={Object {}}
                  className="HoiPoi__Slider__slider-1-1"
                  defaultValue={0}
                  disabled={false}
                  dotStyle={Object {}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    Array [
                      Object {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={Object {}}
                  max={100}
                  min={0}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={Object {}}
                  reverse={false}
                  step={1}
                  trackStyle={
                    Array [
                      Object {},
                    ]
                  }
                  value={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider HoiPoi__Slider__slider-1-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={Object {}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={Object {}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          Object {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={Object {}}
                      dotStyle={Object {}}
                      dots={false}
                      included={true}
                      lowerBound={0}
                      marks={Object {}}
                      max={100}
                      min={0}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={1}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-1-2"
                      key="0"
                    >
                      <span
                        className="HoiPoi__Slider__overlayLabel-1-3"
                        style={
                          Object {
                            "left": "0%",
                          }
                        }
                      >
                        0
                      </span>
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-1-4"
                        disabled={false}
                        dragging="false"
                        max={100}
                        min={0}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={Object {}}
                        value={0}
                        vertical={false}
                      >
                        <div
                          aria-disabled={false}
                          aria-valuemax={100}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="HoiPoi__Slider__overlayHandler-1-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            Object {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={0}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={0}
                      marks={Object {}}
                      max={100}
                      min={0}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={Object {}}
            />
          </div>
        </Component>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": Object {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "badges": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "24px",
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": Object {
            "& ::-moz-selection": Object {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": Object {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.5.1",
        }
      }
    >
      <Slider
        isPercentage={false}
        isRange={false}
        isReadOnly={true}
        label="Lorem ipsum"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={Object {}}
        step={1}
        value={0}
      >
        <Component
          className="HoiPoi__Slider__root-2-0 HoiPoi__Slider__isReadOnly-2-5"
          label="Lorem ipsum"
          labelMode="vertical"
          overrides={Object {}}
        >
          <div
            className="HoiPoi__InputWrapper__root-2-6 HoiPoi__InputWrapper__vertical-2-10 HoiPoi__Slider__root-2-0 HoiPoi__Slider__isReadOnly-2-5"
          >
            <div
              className="HoiPoi__InputWrapper__inputWrapper-2-7"
            >
              <Label
                className="HoiPoi__InputWrapper__Label-2-9"
              >
                <div
                  className="HoiPoi__Label__root-2-15 HoiPoi__InputWrapper__Label-2-9"
                >
                  <Text
                    className="HoiPoi__Label__Text-2-16"
                    overrides={Object {}}
                    type="body"
                  >
                    <span
                      className="HoiPoi__Text__root-2-19 HoiPoi__Label__Text-2-16 HoiPoi__Text__body-2-29"
                    >
                      Lorem ipsum
                    </span>
                  </Text>
                </div>
              </Label>
              <div
                className="HoiPoi__InputWrapper__formControl-2-12"
              >
                <ComponentEnhancer(undefined)
                  activeDotStyle={Object {}}
                  className="HoiPoi__Slider__slider-2-1"
                  defaultValue={0}
                  disabled={true}
                  dotStyle={Object {}}
                  dots={false}
                  handle={[Function]}
                  handleStyle={
                    Array [
                      Object {},
                    ]
                  }
                  included={true}
                  labelMode="vertical"
                  marks={Object {}}
                  max={100}
                  min={0}
                  onAfterChange={[Function]}
                  onBeforeChange={[Function]}
                  onChange={[Function]}
                  prefixCls="rc-slider"
                  railStyle={Object {}}
                  reverse={false}
                  step={1}
                  trackStyle={
                    Array [
                      Object {},
                    ]
                  }
                  value={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider rc-slider-disabled HoiPoi__Slider__slider-2-1"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="rc-slider-rail"
                      style={Object {}}
                    />
                    <Track
                      className="rc-slider-track"
                      included={true}
                      length={0}
                      offset={0}
                      reverse={false}
                      style={Object {}}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-track"
                        style={
                          Object {
                            "left": "0%",
                            "right": "auto",
                            "width": "0%",
                          }
                        }
                      />
                    </Track>
                    <Steps
                      activeDotStyle={Object {}}
                      dotStyle={Object {}}
                      dots={false}
                      included={true}
                      lowerBound={0}
                      marks={Object {}}
                      max={100}
                      min={0}
                      prefixCls="rc-slider"
                      reverse={false}
                      step={1}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-step"
                      />
                    </Steps>
                    <div
                      className="HoiPoi__Slider__overlay-2-2"
                      key="0"
                    >
                      <Handle
                        className="HoiPoi__Slider__overlayHandler-2-4"
                        disabled={true}
                        dragging="false"
                        max={100}
                        min={0}
                        offset={0}
                        prefixCls="hoi-poi-slider"
                        reverse={false}
                        style={Object {}}
                        value={0}
                        vertical={false}
                      >
                        <div
                          aria-disabled={true}
                          aria-valuemax={100}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="HoiPoi__Slider__overlayHandler-2-4"
                          dragging="false"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          role="slider"
                          style={
                            Object {
                              "left": "0%",
                              "right": "auto",
                              "transform": "translateX(-50%)",
                            }
                          }
                          tabIndex={null}
                        />
                      </Handle>
                    </div>
                    <Marks
                      className="rc-slider-mark"
                      included={true}
                      lowerBound={0}
                      marks={Object {}}
                      max={100}
                      min={0}
                      onClickLabel={[Function]}
                      reverse={false}
                      upperBound={0}
                      vertical={false}
                    >
                      <div
                        className="rc-slider-mark"
                      />
                    </Marks>
                  </div>
                </ComponentEnhancer(undefined)>
              </div>
            </div>
            <Component
              className=""
              overrides={Object {}}
            />
          </div>
        </Component>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
